<resources>
    <string name="app_name">Job Interview</string>
    <string name="qna_title">QnA list by category</string>
    <string name="item_q">Q.</string>
    <string name="item_a">A.</string>
    <string name="desc_add">Add QnA</string>
    <string name="practice">practice</string>
    <string name="desc_expand">Expand contents</string>
    <string name="add_title">Add QnA</string>
    <string name="question">Question</string>
    <string name="answer">Answer</string>
    <string name="cancel">cancel</string>
    <string name="save">save</string>
    <string name="qnas">QnAs</string>
    <string name="bookmark">Bookmark</string>
    <string name="add_category">Category: %1$s</string>
    <string name="bookmark_list">Bookmark List</string>
    <string name="complete">complete</string>
    <string name="desc_play">play question</string>
    <string name="desc_pause">pause question</string>
    <string name="practice_current_index">%1$d / %2$d</string>
    <string name="practice_show_answer">Click the answer!</string>
    <string name="practice_hide_the_answer"><u>Hide the answer</u></string>
    <string name="to_the_end">to the end</string>
</resources>