<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <ImageButton
        android:id="@+id/button_play"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:background="@null"
        android:contentDescription="@string/desc_play"
        android:padding="0dp"
        android:src="@drawable/ic_play"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/button_pause"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="30dp"
        android:background="@null"
        android:contentDescription="@string/desc_pause"
        android:padding="0dp"
        android:src="@drawable/ic_pause"
        android:visibility="gone"
        app:layout_constraintStart_toEndOf="@id/button_play"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/button_prev"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@null"
        android:contentDescription="@string/desc_play"
        android:padding="0dp"
        android:src="@drawable/ic_arrow_prev"
        app:layout_constraintBottom_toBottomOf="@id/card_question"
        app:layout_constraintEnd_toStartOf="@id/card_question"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_play" />

    <androidx.cardview.widget.CardView
        android:id="@+id/card_question"
        android:layout_width="0dp"
        android:layout_height="500dp"
        android:layout_marginTop="5dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="0dp"
        app:layout_constraintEnd_toStartOf="@id/button_next"
        app:layout_constraintStart_toEndOf="@id/button_prev"
        app:layout_constraintTop_toBottomOf="@id/button_play"
        app:layout_constraintWidth_percent="0.80">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/gradient_practice_background"
            android:padding="20dp">

            <TextView
                android:id="@+id/text_q"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:text="@string/item_q"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/text_question"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:fontFamily="sans-serif-light"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="@id/text_q"
                app:layout_constraintStart_toEndOf="@id/text_q"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent="0.85"
                tools:text="What is Android?" />

            <TextView
                android:id="@+id/text_a"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="sans-serif-light"
                android:text="@string/item_a"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="@id/text_q"
                app:layout_constraintStart_toStartOf="@id/text_q"
                app:layout_constraintTop_toBottomOf="@id/text_q" />

            <TextView
                android:id="@+id/text_answer"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="4dp"
                android:fontFamily="sans-serif-light"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintStart_toEndOf="@id/text_a"
                app:layout_constraintTop_toBottomOf="@id/text_question"
                app:layout_constraintTop_toTopOf="@id/text_a"
                app:layout_constraintWidth_percent="0.9"
                tools:text="Android is an open-source mobile operating system developed by Google, based on the Linux kernel. It is designed for touchscreen devices and provides a flexible framework for developers to build applications using Kotlin, Java, or C++." />

            <TextView
                android:id="@+id/text_current_index"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:textColor="@color/white"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:text="2 / 3" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <ImageButton
        android:id="@+id/button_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@null"
        android:contentDescription="@string/desc_play"
        android:padding="0dp"
        android:src="@drawable/ic_arrow_next"
        app:layout_constraintBottom_toBottomOf="@id/card_question"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/card_question"
        app:layout_constraintTop_toBottomOf="@id/button_play" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_complete"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="0dp"

        android:layout_height="60dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@color/light_blue"
        android:fontFamily="sans-serif-light"
        android:text="@string/complete"
        android:textColor="@color/white"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_percent="0.9" />

</androidx.constraintlayout.widget.ConstraintLayout>